--- a/legal-notice/index.html
+++ b/legal-notice/index.html
@@ -333,7 +333,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-7a426f9 elementor-widget elementor-widget-text-editor" data-id="7a426f9" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>We encourage you to reach out to us if you require any clarification or assistance regarding the legal information presented on this page.</p><p><span style="color: #000000;"><a style="color: #000000;" href="/cdn-cgi/l/email-protection#ff909999969c969e93bf8d90869e939b9a999a919c9a8b9a9c97d19c9092"><span style="text-decoration: underline;"><span class="__cf_email__" data-cfemail="4f202929262c262e230f3d20362e232b2a292a212c2a3b2a2c27612c2022">[email&#160;protected]</span></span></a></span></p>						</div>
+							<p>We encourage you to reach out to us if you require any clarification or assistance regarding the legal information presented on this page.</p><p><span style="color: #000000;"><a style="color: #000000;" href="/cdn-cgi/l/email-protection#ff909999969c969e93bf8d90869e939b9a999a919c9a8b9a9c97d19c9092"><span style="text-decoration: underline;"><span class="__cf_email__" data-cfemail="4f202929262c262e230f3d20362e232b2a292a212c2a3b2a2c27612c2022">official@royaldefencetech.com</span></span></a></span></p>						</div>
 				</div>
 					</div>
 				</div>
