--- a/contact.html
+++ b/contact.html
@@ -328,7 +328,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-0be21bc elementor-widget elementor-widget-text-editor" data-id="0be21bc" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>We&#8217;re pleased you decided to contact Royal Defence Technologies.</p><p>For Media Inquires and General Information:</p><p><span style="color: #000000;"><a style="color: #000000;" href="/cdn-cgi/l/email-protection#dab5bcbcb3b9b3bbb69aa8b5a3bbb6bebfbcbfb4b9bfaebfb9b2f4b9b5b7"><span style="text-decoration: underline;"><span class="__cf_email__" data-cfemail="630c05050a000a020f23110c1a020f070605060d00061706000b4d000c0e">[email&#160;protected]</span></span></a></span></p><p><span style="text-decoration: underline;">+1 (813) 768-3785</span>   <strong><span style="color: #ff0000;">( For Government Officials Only)</span></strong></p>						</div>
+							<p>We&#8217;re pleased you decided to contact Royal Defence Technologies.</p><p>For Media Inquires and General Information:</p><p><span style="color: #000000;"><a style="color: #000000;" href="/cdn-cgi/l/email-protection#dab5bcbcb3b9b3bbb69aa8b5a3bbb6bebfbcbfb4b9bfaebfb9b2f4b9b5b7"><span style="text-decoration: underline;"><span class="__cf_email__" data-cfemail="630c05050a000a020f23110c1a020f070605060d00061706000b4d000c0e">official@royaldefencetech.com</span></span></a></span></p><p><span style="text-decoration: underline;">+1 (813) 768-3785</span>   <strong><span style="color: #ff0000;">( For Government Officials Only)</span></strong></p>						</div>
 				</div>
 					</div>
 				</div>
