--- a/contact/index.html
+++ b/contact/index.html
@@ -328,7 +328,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-0be21bc elementor-widget elementor-widget-text-editor" data-id="0be21bc" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>We&#8217;re pleased you decided to contact Royal Defence Technologies.</p><p>For Media Inquires and General Information:</p><p><span style="color: #000000;"><a style="color: #000000;" href="/cdn-cgi/l/email-protection#214e4747484248404d61534e58404d454447444f4244554442490f424e4c"><span style="text-decoration: underline;"><span class="__cf_email__" data-cfemail="69060f0f000a000805291b061008050d0c0f0c070a0c1d0c0a01470a0604">[email&#160;protected]</span></span></a></span></p><p><span style="text-decoration: underline;">+1 (813) 768-3785</span>   <strong><span style="color: #ff0000;">( For Government Officials Only)</span></strong></p>						</div>
+							<p>We&#8217;re pleased you decided to contact Royal Defence Technologies.</p><p>For Media Inquires and General Information:</p><p><span style="color: #000000;"><a style="color: #000000;" href="/cdn-cgi/l/email-protection#214e4747484248404d61534e58404d454447444f4244554442490f424e4c"><span style="text-decoration: underline;"><span class="__cf_email__" data-cfemail="69060f0f000a000805291b061008050d0c0f0c070a0c1d0c0a01470a0604">official@royaldefencetech.com</span></span></a></span></p><p><span style="text-decoration: underline;">+1 (813) 768-3785</span>   <strong><span style="color: #ff0000;">( For Government Officials Only)</span></strong></p>						</div>
 				</div>
 					</div>
 				</div>
