--- a/cookies-policy/index.html
+++ b/cookies-policy/index.html
@@ -332,7 +332,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-7e6e60f elementor-widget elementor-widget-text-editor" data-id="7e6e60f" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>We are here to assist you and provide any additional information you may need regarding the management of cookies on our website.</p><p><span style="color: #000000;"><a style="color: #000000;" href="/cdn-cgi/l/email-protection#177871717e747e767b5765786e767b737271727974726372747f3974787a"><span style="text-decoration: underline;"><span class="__cf_email__" data-cfemail="6a050c0c0309030b062a1805130b060e0f0c0f04090f1e0f090244090507">official@royaldefencetech.com</span></span></a></span></p>						</div>
+							<p>We are here to assist you and provide any additional information you may need regarding the management of cookies on our website.</p><p><span style="color: #000000;"><a style="color: #000000;" href="mailto:official@royaldefencetech.com">official@royaldefencetech.com</span></span></a></span></p>						</div>
 				</div>
 					</div>
 				</div>
